NavBar links fixed

--- a/products.html
+++ b/products.html
@@ -46,7 +46,7 @@
               <ul>
                 <li><a class="nav-link scrollto" href="/index.html">Inicio</a></li>
                 <li><a class="nav-link scrollto" href="/about.html">Acerca de</a></li>
-                <li><a class="nav-link scrollto" href="/certifications.html">Certificaciones</a></li>
+                <!--<li><a class="nav-link scrollto" href="/certifications.html">Certificaciones</a></li>-->
                 <li class="dropdown"><a class="nav-link scrollto active" href="#"><span>Productos</span> <i class="bi bi-chevron-down"></i></a>
                   <ul>
                     <li><a href="#" class="active">Todos los productos</a></li>
