--- a/about.html
+++ b/about.html
@@ -46,13 +46,13 @@
               <ul>
                 <li><a class="nav-link scrollto" href="/index.html">Inicio</a></li>
                 <li><a class="nav-link scrollto active" href="#">Acerca de</a></li>
-                <li><a class="nav-link scrollto" href="/certifications.html">Certificaciones</a></li>
+                <!--<li><a class="nav-link scrollto" href="/certifications.html">Certificaciones</a></li>-->
                 <li class="dropdown"><a class="nav-link scrollto" href="/products.html"><span>Productos</span> <i class="bi bi-chevron-down"></i></a>
                   <ul>
                     <li><a href="/products.html">Todos los productos</a></li>
-                    <li><a href="#">Novidesa</a></li>
-                    <li><a href="#">CemPanel</a></li>
-                    <li><a href="#">Cilimex</a></li>
+                    <li><a href="/products-novidesa.html">Novidesa</a></li>
+                    <li><a href="/products-cempanel.html">CemPanel</a></li>
+                    <li><a href="/products-cilimex.html">Cilimex</a></li>
                   </ul>
                 </li>
               </ul>
