--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <ul>
                 <li><a class="nav-link scrollto active" href="#">Inicio</a></li>
                 <li><a class="nav-link scrollto" href="/about.html">Acerca de</a></li>
-                <li><a class="nav-link scrollto" href="/certifications.html">Certificaciones</a></li>
+                <!--<li><a class="nav-link scrollto" href="/certifications.html">Certificaciones</a></li>-->
                 <li class="dropdown"><a href="/products.html"><span>Productos</span> <i class="bi bi-chevron-down"></i></a>
                   <ul>
                     <li><a href="/products.html">Todos los productos</a></li>
