--- a/products-cilimex.html
+++ b/products-cilimex.html
@@ -46,7 +46,7 @@
               <ul>
                 <li><a class="nav-link scrollto" href="/index.html">Inicio</a></li>
                 <li><a class="nav-link scrollto" href="/about.html">Acerca de</a></li>
-                <li><a class="nav-link scrollto" href="#">Certificaciones</a></li>
+                <!--<li><a class="nav-link scrollto" href="#">Certificaciones</a></li>-->
                 <li class="dropdown"><a class="nav-link scrollto active" href="/products.html"><span>Productos</span> <i class="bi bi-chevron-down"></i></a>
                   <ul>
                     <li><a href="/products.html">Todos los productos</a></li>
