CFPS page added and small overall site style modifications

--- a/products-cempanel.html
+++ b/products-cempanel.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Grupo IHC - Certificaciones</title>
+  <title>Grupo IHC - Productos | Cempanel</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -36,7 +36,7 @@
     <div class="container-fluid">
 
       <div class="row justify-content-center">
-        <div class="col-xl-10 d-flex align-items-center justify-content-lg-between">
+        <div class="col-xl-11 d-flex align-items-center justify-content-lg-between">
 
           <a href="/index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid"></a>
 
@@ -46,8 +46,7 @@
               <ul>
                 <li><a class="nav-link scrollto" href="/index.html">Inicio</a></li>
                 <li><a class="nav-link scrollto" href="/about.html">Acerca de</a></li>
-                <!--<li><a class="nav-link scrollto" href="/certifications.html">Certificaciones</a></li>-->
-                <li class="dropdown"><a class="nav-link scrollto active" href="#"><span>Productos</span> <i class="bi bi-chevron-down"></i></a>
+                <li class="dropdown"><a href="#" class="nav-link scrollto active"><span>Productos</span> <i class="bi bi-chevron-down"></i></a>
                   <ul>
                     <li><a href="/products.html">Todos los productos</a></li>
                     <li><a href="/products-novidesa.html">Novidesa</a></li>
@@ -55,6 +54,7 @@
                     <li><a href="/products-cilimex.html">Cilimex</a></li>
                   </ul>
                 </li>
+                <li><a class="nav-link scrollto" href="/cfps.html">Sistemas contra incendios</a></li>
               </ul>
 
               <i class="bi bi-list mobile-nav-toggle"></i>
@@ -210,10 +210,8 @@
       <a href="/contact.html" class="get-started-btn scrollto">Contáctanos</a>
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; 2023 <strong><span>Grupo IHC</span></strong>. All Rights Reserved
