--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     <div class="container-fluid">
 
       <div class="row justify-content-center">
-        <div class="col-xl-10 d-flex align-items-center justify-content-lg-between">
+        <div class="col-xl-11 d-flex align-items-center justify-content-lg-between">
 
           <a href="/index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid"></a>
 
@@ -46,8 +46,7 @@
               <ul>
                 <li><a class="nav-link scrollto" href="/index.html">Inicio</a></li>
                 <li><a class="nav-link scrollto active" href="#">Acerca de</a></li>
-                <!--<li><a class="nav-link scrollto" href="/certifications.html">Certificaciones</a></li>-->
-                <li class="dropdown"><a class="nav-link scrollto" href="/products.html"><span>Productos</span> <i class="bi bi-chevron-down"></i></a>
+                <li class="dropdown"><a href="/products.html"><span>Productos</span> <i class="bi bi-chevron-down"></i></a>
                   <ul>
                     <li><a href="/products.html">Todos los productos</a></li>
                     <li><a href="/products-novidesa.html">Novidesa</a></li>
@@ -55,6 +54,7 @@
                     <li><a href="/products-cilimex.html">Cilimex</a></li>
                   </ul>
                 </li>
+                <li><a class="nav-link scrollto" href="/cfps.html">Sistemas contra incendios</a></li>
               </ul>
 
               <i class="bi bi-list mobile-nav-toggle"></i>
@@ -123,36 +123,36 @@
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="card">
-              <a href="/assets/pdf/ihc_makros.pdf"><img src="/assets/img/projects/makros.png" class="card-img-top" alt="..."></a>
+              <a href="/assets/pdf/ihc-makros.pdf"><img src="/assets/img/projects/makros.png" class="card-img-top" alt="..."></a>
               <div class="card-body d-flex align-items-end justify-content-center">
-                <a href="/assets/pdf/ihc_makros.pdf">Proyectos con <b>MAKROS</b></a>
+                <a href="/assets/pdf/ihc-makros.pdf">Proyectos con <b>MAKROS</b></a>
               </div>
             </div>
           </div>
           
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="card">
-              <a href="/assets/pdf/ihc_ikos.pdf"><img src="/assets/img/projects/ikos.png" class="card-img-top" alt="..."></a>
+              <a href="/assets/pdf/ihc-ikos.pdf"><img src="/assets/img/projects/ikos.png" class="card-img-top" alt="..."></a>
               <div class="card-body d-flex align-items-end justify-content-center">
-                <a href="/assets/pdf/ihc_ikos.pdf">Proyectos con <b>IKOS</b></a>
+                <a href="/assets/pdf/ihc-ikos.pdf">Proyectos con <b>IKOS</b></a>
               </div>
             </div>
           </div>
   
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="card">
-              <a href="/assets/pdf/ihc_h16.pdf"><img src="/assets/img/projects/h16.png" class="card-img-top" alt="..."></a>
+              <a href="/assets/pdf/ihc-h16.pdf"><img src="/assets/img/projects/h16.png" class="card-img-top" alt="..."></a>
               <div class="card-body d-flex align-items-end justify-content-center">
-                <a href="/assets/pdf/ihc_h16.pdf">Proyectos con <b>H16</b></a>
+                <a href="/assets/pdf/ihc-h16.pdf">Proyectos con <b>H16</b></a>
               </div>
             </div>
           </div>
   
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="card">
-              <a href="/assets/pdf/ihc_holmak.pdf"><img src="/assets/img/projects/holmak.png" class="card-img-top" alt="..."></a>
+              <a href="/assets/pdf/ihc-holmak.pdf"><img src="/assets/img/projects/holmak.png" class="card-img-top" alt="..."></a>
               <div class="card-body d-flex align-items-end justify-content-center">
-                <a href="/assets/pdf/ihc_holmak.pdf">Proyectos con <b>HOLMAK</b></a>
+                <a href="/assets/pdf/ihc-holmak.pdf">Proyectos con <b>HOLMAK</b></a>
               </div>
             </div>
           </div>
@@ -359,10 +359,8 @@
       <a href="/contact.html" class="get-started-btn scrollto">Contáctanos</a>
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; 2023 <strong><span>Grupo IHC</span></strong>. All Rights Reserved
