--- a/contact.html
+++ b/contact.html
@@ -46,8 +46,7 @@
               <ul>
                 <li><a class="nav-link scrollto" href="/index.html">Inicio</a></li>
                 <li><a class="nav-link scrollto" href="/about.html">Acerca de</a></li>
-                <!--<li><a class="nav-link scrollto" href="/certifications.html">Certificaciones</a></li>-->
-                <li class="dropdown"><a class="nav-link scrollto" href="/products.html"><span>Productos</span> <i class="bi bi-chevron-down"></i></a>
+                <li class="dropdown"><a href="/products.html"><span>Productos</span> <i class="bi bi-chevron-down"></i></a>
                   <ul>
                     <li><a href="/products.html">Todos los productos</a></li>
                     <li><a href="/products-novidesa.html">Novidesa</a></li>
@@ -55,6 +54,7 @@
                     <li><a href="/products-cilimex.html">Cilimex</a></li>
                   </ul>
                 </li>
+                <li><a class="nav-link scrollto" href="/cfps.html">Sistemas contra incendios</a></li>
               </ul>
 
               <i class="bi bi-list mobile-nav-toggle"></i>
@@ -160,10 +160,8 @@
       <a href="#" class="get-started-btn scrollto">Contáctanos</a>
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; 2023 <strong><span>Grupo IHC</span></strong>. All Rights Reserved
