--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container-fluid">
 
       <div class="row justify-content-center">
-        <div class="col-xl-10 d-flex align-items-center justify-content-lg-between">
+        <div class="col-xl-11 d-flex align-items-center justify-content-lg-between">
 
           <a href="#" class="logo me-auto me-lg-0"><img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid"></a>
 
@@ -47,7 +47,6 @@
               <ul>
                 <li><a class="nav-link scrollto active" href="#">Inicio</a></li>
                 <li><a class="nav-link scrollto" href="/about.html">Acerca de</a></li>
-                <!--<li><a class="nav-link scrollto" href="/certifications.html">Certificaciones</a></li>-->
                 <li class="dropdown"><a href="/products.html"><span>Productos</span> <i class="bi bi-chevron-down"></i></a>
                   <ul>
                     <li><a href="/products.html">Todos los productos</a></li>
@@ -56,6 +55,7 @@
                     <li><a href="/products-cilimex.html">Cilimex</a></li>
                   </ul>
                 </li>
+                <li><a class="nav-link scrollto" href="/cfps.html">Sistemas contra incendios</a></li>
               </ul>
 
               <i class="bi bi-list mobile-nav-toggle"></i>
@@ -84,6 +84,10 @@
             <h2>Distribución de sistemas constructivos</h2>
           </div>
           <h1>Instalaciones Hidromecánicas y de Construcción S.A. de C.V.</h1>
+          <div class="social-links">
+            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+          </div>
         </div>
       </div>
     </div>
@@ -126,13 +130,13 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Productos</h2>
-          <p>Dentro de nuestro catálogo contamos con una amplia gama de productos con los mejores materiales y de la mejor calidad. Actualmente somos distribuidores autorizados de:</p>
+          <h2>Productos Y Servicios</h2>
+          <p>Dentro de nuestro catálogo contamos con una amplia gama de productos de los mejores materiales y la mejor calidad, además de servicios especializados para la construcción con todas sus credenciales y certificaciones.</p>
         </div>
 
-        <div class="cards row">
+        <div class="cards row justify-content-center">
           
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+          <div class="col-lg-5 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="product-card" id="novidesa-card">
               <div class="product-card-novi">
                 <img src="/assets/img/products/novidesa-logo.png" class="card-img-top" alt="...">
@@ -146,8 +150,7 @@
             </div>
           </div>
           
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+          <div class="col-lg-5 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="product-card" id="cempanel-card">
               <img src="/assets/img/products/cempanel-logo.png" class="card-img-top" alt="...">
               <div class="card-body">
@@ -157,7 +160,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+          <div class="col-lg-5 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="product-card" id="cilimex-card">
               <img src="/assets/img/products/cilimex-logo.png" class="card-img-top" alt="...">
               <div class="card-body">
@@ -167,12 +170,27 @@
             </div>
           </div>
 
+          <div class="col-lg-5 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+            <div class="product-card" id="cfps-card">
+              <div class="d-flex align-items-center">
+                <img src="/assets/img/products/cfps.png" class="card-img-top d-flex align-items-start" alt="...">
+                <h3>Sistemas Contra incendio Industrial e Inmobiliario</h3>
+              </div>
+              <div class="card-body">
+                <p class="card-text"> Servicios para la protección contra incendios en la construcción con la más alta certificación: NFPA CFPS</p>
+                <a href="/cfps.html" class="go-to-btn" id="cfps-btn">Ver más</a>
+              </div>
+            </div>
+          </div>
+
+
         </div>
 
       </div>
     </section><!-- End Services Section -->
 
     <!-- ======= Certification Section ======= -->
+    <!--
     <section id="certification" class="certification d-flex justify-content-center">
       <div class="container">
 
@@ -192,7 +210,9 @@
         </div>
 
       </div>
-    </section><!-- End Cta Section -->
+    </section>-->
+    <!-- End Cta Section -->
+
 
   </main><!-- End #main -->
 
@@ -205,10 +225,8 @@
       <a href="/contact.html" class="get-started-btn scrollto">Contáctanos</a>
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; 2023 <strong><span>Grupo IHC</span></strong>. All Rights Reserved
