Social links ref added

--- a/products-novidesa.html
+++ b/products-novidesa.html
@@ -192,8 +192,8 @@
       <a href="/contact.html" class="get-started-btn scrollto">Contáctanos</a>
 
       <div class="social-links">
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.facebook.com/grupoihc.oficial" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/grupoihc.oficial" class="instagram"><i class="bx bxl-instagram"></i></a>
       </div>
       <div class="copyright">
         &copy; 2023 <strong><span>Grupo IHC</span></strong>. All Rights Reserved
