--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
           </div>
           <h1>Instalaciones Hidromecánicas y de Construcción S.A. de C.V.</h1>
           <div class="social-links">
-            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+            <a href="https://www.facebook.com/grupoihc.oficial" class="facebook"><i class="bx bxl-facebook"></i></a>
+            <a href="https://www.instagram.com/grupoihc.oficial" class="instagram"><i class="bx bxl-instagram"></i></a>
           </div>
         </div>
       </div>
@@ -225,8 +225,8 @@
       <a href="/contact.html" class="get-started-btn scrollto">Contáctanos</a>
 
       <div class="social-links">
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.facebook.com/grupoihc.oficial" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/grupoihc.oficial" class="instagram"><i class="bx bxl-instagram"></i></a>
       </div>
       <div class="copyright">
         &copy; 2023 <strong><span>Grupo IHC</span></strong>. All Rights Reserved
