Small content changes

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <ul>
               <li><i class="ri-check-double-line"></i> Paneles a base de poliestireno expansible (EPS)</li>
               <li><i class="ri-check-double-line"></i> Paneles de Fibrocemento</li>
-              <li><i class="ri-check-double-line"></i> Productos de Fibra de Vidrio</li>
+              <li><i class="ri-check-double-line"></i> Casetón y columnas a base de fibra de vidrio</li>
             </ul>
 
             <a href="/about.html" class="btn-learn-more">Conoce más</a>
