--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
 
           <div class="col-lg-5 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="product-card" id="cfps-card">
-              <div class="d-flex align-items-center">
-                <img src="/assets/img/products/cfps.png" class="card-img-top d-flex align-items-start" alt="...">
-                <h3>Sistemas Contra incendio Industrial e Inmobiliario</h3>
+              <div class="d-flex align-items-center justify-content-center">
+                <img src="/assets/img/products/cfps.png" class="card-img-top" alt="...">
+                <h3 class="col-9">Sistemas Contra incendio Industrial e Inmobiliario</h3>
               </div>
               <div class="card-body">
                 <p class="card-text"> Servicios para la protección contra incendios en la construcción con la más alta certificación: NFPA CFPS</p>
