Small content changes

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="row d-flex justify-content-center">
             <h2>Distribución de sistemas constructivos</h2>
           </div>
-          <h1>Instalaciones Hidromecánicas y de Construcción S.A. de C.V.</h1>
+          <h1>Instalaciones Hidromecánicas y Construcciones S.A. de C.V.</h1>
           <div class="social-links">
             <a href="https://www.facebook.com/grupoihc.oficial" class="facebook"><i class="bx bxl-facebook"></i></a>
             <a href="https://www.instagram.com/grupoihc.oficial" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -101,7 +101,8 @@
         
         <div class="section-title">
           <h2>¿Quiénes somos?</h2>
-          <p>Somos una empresa dedicada a la elaboración, ejecución y distribución de sistemas para el ramo de la construcción, ubicada en la ciudad de Chihuahua, México. Contamos con más de 25 años de experiencia en la industria.</p>
+          <p>Somos una empresa dedicada a la elaboración, ejecución y distribución de sistemas para el ramo de la construcción, 
+            ubicada en la ciudad de Chihuahua, México. Contamos con 30 años de experiencia en la industria.</p>
         </div>
 
         <div class="row content">
@@ -115,6 +116,7 @@
               <li><i class="ri-check-double-line"></i> Paneles a base de poliestireno expansible (EPS)</li>
               <li><i class="ri-check-double-line"></i> Paneles de Fibrocemento</li>
               <li><i class="ri-check-double-line"></i> Casetón y columnas a base de fibra de vidrio</li>
+              <li><i class="ri-check-double-line"></i> Diseño y construcción de sistemas contra incendio</li>
             </ul>
 
             <a href="/about.html" class="btn-learn-more">Conoce más</a>
