--- a/products-cempanel.html
+++ b/products-cempanel.html
@@ -81,7 +81,7 @@
             <img src="/assets/img/products/cempanel-logo.png" class="img-fluid" alt="">
   
             <p>Panel mexicano fabricado a base de cemento Portland y fibras naturales que através del proceso de fabricación y autoclavado, es sometido a condiciones de alta temperatura y presión, obteniendo caracteristicas especiales tales como gran estabilidad dimensional, dureza y resistencia mecánica.</p>
-            <p>Los paneles a base Con estas propiedades, las placas de Fibrocemento aportan grandes beneficios para trabajar, de manera que proporciona a los proyectos la resistencia y durabilidad del cemento sumando a la vez ligereza y estética.</p>
+            <p>Los paneles a base con estas propiedades, las placas de Fibrocemento aportan grandes beneficios para trabajar, de manera que proporciona a los proyectos la resistencia y durabilidad del cemento sumando a la vez ligereza y estética.</p>
             <p>Cempanel aporta grandes beneficios en estructura y tiempos de ejecución lo que conlleva a un importante ahorro económico.</p>
           
           </div>
