--- a/contact.html
+++ b/contact.html
@@ -182,8 +182,10 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
+  <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <script src="assets/php/contact.php"></script>
 
 </body>
 
