--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="assets/php/contact.php" method="POST" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Nombre" required>
@@ -131,7 +131,7 @@
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div class="text-center sent-message">Tu mensaje ha sido enviado correctamente. ¡Gracias!</div>
               </div>
               <div class="text-center"><button type="submit">Enviar Email</button></div>
             </form>
