H16 product added to novidesa and small desingn fixes on cftps page

--- a/cfps.html
+++ b/cfps.html
@@ -87,7 +87,7 @@
             Nuestros servicios de protección contra incendios abarcan:</p>
         </div>
 
-        <div class="services-list col-lg-9">
+        <div class="services-list">
           <ul>
             <li>
               <h3>Diseño y construcción de sistemas contra incendio</h3>
