--- a/products-novidesa.html
+++ b/products-novidesa.html
@@ -15,6 +15,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -154,7 +155,7 @@
               </div>
             </div>
 
-            <div class="product-last row justify-content-center">
+            <div class="product row justify-content-center">
               <div class="logo">
                 <img src="/assets/img/products/novidesa/holmak.png" class="img-fluid" alt="">
               </div>
@@ -167,6 +168,25 @@
                 <div class="img-border col-lg-5 d-flex justify-content-center align-items-center">
                   <div class="img-bg d-flex justify-content-center align-items-center">
                     <img src="/assets/img/projects/holmak.png" class="img-fluid" alt="">
+                  </div>
+                  
+                </div>
+              </div>
+            </div>
+
+            <div class="product-last row justify-content-center">
+              <div class="logo">
+                <span>H16</span>
+              </div>
+              <div class="info row justify-content-center align-items-center">
+                <div class="text col-lg-7 justify-content-center">
+                  <p>La placa aislante H16 se fabrica con poliestireno expansible (EPS). Cuenta con un agente ignífugo que no propaga la flama. Las placas proporcionan aislamiento térmico a muros existentes y losas de azotea.</p>
+                  <p>Por su configuración modular y un machihembrado a lo largo de todo su perímetro, las piezas se ensamblan en tres y proporcionan hermeticidad y homogeneidad al aislamiento obteniendo una superficie completamente plana y lisa para recibir una amplia variedad de acabados.</p>
+                  <p>El panel se fabrica con poliestireno expandido (EPS). Cuenta con un agente ignífugo que no propaga la flama.</p>
+                </div>
+                <div class="img-border col-lg-5 d-flex justify-content-center align-items-center">
+                  <div class="img-bg d-flex justify-content-center align-items-center">
+                    <img src="/assets/img/projects/h16.png" class="img-fluid" alt="">
                   </div>
                   
                 </div>
