Small desingn and contetnt changes

--- a/cfps.html
+++ b/cfps.html
@@ -95,7 +95,7 @@
             </li>
 
             <li>
-              <h3>Consultorías y auditoría de riesgos contra incendio</h3>
+              <h3>Asesoría y consultoría de riesgos contra incendio</h3>
               <p>Identificamos riesgos potenciales, proponemos soluciones y elaboramos informes detallados para mejorar la seguridad contra incendios.</p>
             </li>
 
