--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
               <div class="email">
                 <i class="ri-mail-line"></i>
                 <h4>Email:</h4>
-                <p>cotizaciones@grupoihc.com.mx</p>
+                <p><a href="mailto: cotizaciones@grupoihc.com.mx">cotizaciones@grupoihc.com.mx</a></p>
               </div>
 
               <div class="phone">
