Small content changes and SEO tags added

--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Grupo IHC - Acerca de</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Conoce de nosotros, somos una empresa ubicada en la ciudad de Chihuahua con presencia al rededor de todo México que comercializa y distribuye productos de alta calidad y tecnología para la industria de la construcción." name="description">
+  <meta content="IHC, Proyectos, Makros, Ikos, H16, Holmak, Novidesa" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/logo-nobg2.svg" rel="icon">
@@ -38,7 +38,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center justify-content-lg-between">
 
-          <a href="/index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid"></a>
+          <a href="/index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo-nobg2.svg" alt="IHC logo" class="img-fluid"></a>
 
           <div class="col-xl-9 d-flex align-items-center justify-content-lg-end">
  
@@ -123,7 +123,7 @@
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="card">
-              <a href="/assets/pdf/ihc-makros.pdf"><img src="/assets/img/projects/makros.png" class="card-img-top" alt="..."></a>
+              <a href="/assets/pdf/ihc-makros.pdf"><img src="/assets/img/projects/makros.png" class="card-img-top" alt="producto Makros"></a>
               <div class="card-body d-flex align-items-end justify-content-center">
                 <a href="/assets/pdf/ihc-makros.pdf">Proyectos con <b>MAKROS</b></a>
               </div>
@@ -132,7 +132,7 @@
           
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="card">
-              <a href="/assets/pdf/ihc-ikos.pdf"><img src="/assets/img/projects/ikos.png" class="card-img-top" alt="..."></a>
+              <a href="/assets/pdf/ihc-ikos.pdf"><img src="/assets/img/projects/ikos.png" class="card-img-top" alt="producto Ikos"></a>
               <div class="card-body d-flex align-items-end justify-content-center">
                 <a href="/assets/pdf/ihc-ikos.pdf">Proyectos con <b>IKOS</b></a>
               </div>
@@ -141,7 +141,7 @@
   
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="card">
-              <a href="/assets/pdf/ihc-h16.pdf"><img src="/assets/img/projects/h16.png" class="card-img-top" alt="..."></a>
+              <a href="/assets/pdf/ihc-h16.pdf"><img src="/assets/img/projects/h16.png" class="card-img-top" alt="producto H16"></a>
               <div class="card-body d-flex align-items-end justify-content-center">
                 <a href="/assets/pdf/ihc-h16.pdf">Proyectos con <b>H16</b></a>
               </div>
@@ -150,7 +150,7 @@
   
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="card">
-              <a href="/assets/pdf/ihc-holmak.pdf"><img src="/assets/img/projects/holmak.png" class="card-img-top" alt="..."></a>
+              <a href="/assets/pdf/ihc-holmak.pdf"><img src="/assets/img/projects/holmak.png" class="card-img-top" alt="producto Holmak"></a>
               <div class="card-body d-flex align-items-end justify-content-center">
                 <a href="/assets/pdf/ihc-holmak.pdf">Proyectos con <b>HOLMAK</b></a>
               </div>
@@ -262,9 +262,6 @@
               <img src="/assets/img/gallery/gallery30.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item" data-bs-interval="4000">
-              <img src="/assets/img/gallery/gallery31.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item" data-bs-interval="4000">
               <img src="/assets/img/gallery/gallery32.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item" data-bs-interval="4000">
@@ -353,7 +350,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid">
+      <img src="assets/img/logo-nobg2.svg" alt="IHC logo" class="img-fluid">
       <p>Instalaciones Hidromecánicas y de Construcción S.A. de C.V.</p>
 
       <a href="/contact.html" class="get-started-btn scrollto">Contáctanos</a>
