--- a/cfps.html
+++ b/cfps.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Grupo IHC - CFPS</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="En IHC, ofrecemos soluciones integrales de protección contra incendios para la industria de la construcción." name="description">
+  <meta content="IHC, CFPS, NFPA, sistemas contra incendio" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/logo-nobg2.svg" rel="icon">
@@ -38,7 +38,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center justify-content-lg-between">
 
-          <a href="/index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid"></a>
+          <a href="/index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo-nobg2.svg" alt="IHC logo" class="img-fluid"></a>
 
           <div class="col-xl-9 d-flex align-items-center justify-content-lg-end">
  
@@ -77,7 +77,7 @@
       <div class="container">
         
         <div class="section-title d-flex flex-column justify-content-center align-items-center">
-          <img src="assets/img/products/cfps.png" alt="">
+          <img src="assets/img/products/cfps.png" alt="Certified fire protection specialist">
 
           <p>En <strong>IHC</strong>, ofrecemos soluciones integrales de protección contra incendios para la industria de la construcción. 
             Con experiencia y un equipo de profesionales certificados <strong>CFPS (Certified Fire Protection Specialist)</strong> por la <strong>NFPA (National Fire Protection Association)</strong>, 
@@ -130,7 +130,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid">
+      <img src="assets/img/logo-nobg2.svg" alt="IHC logo" class="img-fluid">
       <p>Instalaciones Hidromecánicas y de Construcción S.A. de C.V.</p>
 
       <a href="/contact.html" class="get-started-btn scrollto">Contáctanos</a>
