--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Grupo IHC - Contacto</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Ponte en contacto con nosotros." name="description">
+  <meta content="IHC, Contacto" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/logo-nobg2.svg" rel="icon">
@@ -38,7 +38,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-10 d-flex align-items-center justify-content-lg-between">
 
-          <a href="/index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid"></a>
+          <a href="/index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo-nobg2.svg" alt="IHC logo" class="img-fluid"></a>
 
           <div class="col-xl-9 d-flex align-items-center justify-content-lg-end">
  
@@ -154,7 +154,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid">
+      <img src="assets/img/logo-nobg2.svg" alt="IHC logo" class="img-fluid">
       <p>Instalaciones Hidromecánicas y de Construcción S.A. de C.V.</p>
 
       <a href="#" class="get-started-btn scrollto">Contáctanos</a>
