--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Grupo IHC - Inicio</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="En IHC somos una empresa dedicada a la elaboración, ejecución y distribución de sistemas para el ramo de la construcción, ubicada en la ciudad de Chihuahua, México. 
+                  Contamos con 30 años de experiencia en la industria. Somos proveedores oficiales de productos Novidesa, Cempanel, Cilimex, entre otros." name="description">
+  <meta content="Instalaciones Hidromecánicas y Construcciones, IHC, Distribución de sistemas constructivos, 
+                  Novidesa, Cempanel, Cilimex, Sistemas contra incendios, Chihuahua, México" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/logo-nobg2.svg" rel="icon">
@@ -38,7 +40,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center justify-content-lg-between">
 
-          <a href="#" class="logo me-auto me-lg-0"><img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid"></a>
+          <a href="#" class="logo me-auto me-lg-0"><img src="assets/img/logo-nobg2.svg" alt="IHC logo" class="img-fluid"></a>
 
 
           <div class="col-xl-9 d-flex align-items-center justify-content-lg-end">
@@ -78,7 +80,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-8">
           <div class="row d-flex justify-content-center">
-            <img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid">
+            <img src="assets/img/logo-nobg2.svg" alt="IHC logo" class="img-fluid">
           </div>
           <div class="row d-flex justify-content-center">
             <h2>Distribución de sistemas constructivos</h2>
@@ -141,7 +143,7 @@
           <div class="col-lg-5 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="product-card" id="novidesa-card">
               <div class="product-card-novi">
-                <img src="/assets/img/products/novidesa-logo.png" class="card-img-top" alt="...">
+                <img src="/assets/img/products/novidesa-logo.png" class="card-img-top" alt="Novidesa logo">
                 <div class="card-body">
 
                 <p class="card-text">Productos de moldeo continuo y alma metálica, ligeros, resistentes y aislantes térmicos y acústicos, enfocados en la seguridad y durabilidad.</p>
@@ -154,7 +156,7 @@
           
           <div class="col-lg-5 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="product-card" id="cempanel-card">
-              <img src="/assets/img/products/cempanel-logo.png" class="card-img-top" alt="...">
+              <img src="/assets/img/products/cempanel-logo.png" class="card-img-top" alt="Cempanel logo">
               <div class="card-body">
                 <p class="card-text">Sistemas de construcción ligera de fibrocemento, con gran estética, acabado, resistencia y tecnología.</p>
                 <a href="/products-cempanel.html" class="go-to-btn" id="cem-btn">Ver más</a>
@@ -164,7 +166,7 @@
 
           <div class="col-lg-5 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="product-card" id="cilimex-card">
-              <img src="/assets/img/products/cilimex-logo.png" class="card-img-top" alt="...">
+              <img src="/assets/img/products/cilimex-logo.png" class="card-img-top" alt="Cilimex logo">
               <div class="card-body">
                 <p class="card-text">Productos a base de fibra de vidrio, que aportan ligereza y resistencia para las construcciones.</p>
                 <a href="/products-cilimex.html" class="go-to-btn" id="cili-btn">Ver más</a>
@@ -175,7 +177,7 @@
           <div class="col-lg-5 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="product-card" id="cfps-card">
               <div class="d-flex align-items-center justify-content-center">
-                <img src="/assets/img/products/cfps.png" class="card-img-top" alt="...">
+                <img src="/assets/img/products/cfps.png" class="card-img-top" alt="Certified fire protection specialist">
                 <h3 class="col-9">Sistemas Contra incendio Industrial e Inmobiliario</h3>
               </div>
               <div class="card-body">
@@ -196,7 +198,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid">
+      <img src="assets/img/logo-nobg2.svg" alt="IHC logo" class="img-fluid">
       <p>Instalaciones Hidromecánicas y de Construcción S.A. de C.V.</p>
 
       <a href="/contact.html" class="get-started-btn scrollto">Contáctanos</a>
