--- a/products-cempanel.html
+++ b/products-cempanel.html
@@ -6,8 +6,9 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Grupo IHC - Productos | Cempanel</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Cempanel es un panel mexicano fabricado a base de cemento Portland y fibras naturales que através del proceso de fabricación y autoclavado, es sometido a condiciones de alta temperatura y presión, 
+                obteniendo caracteristicas especiales tales como gran estabilidad dimensional, dureza y resistencia mecánica." name="description">
+  <meta content="IHC, CemPanel, Cempanel Estandar, Cempanel Biselado, Cempanel Rectificado, Cempanel Image, Cempanel Cedar, Cempanel Cemplank, Cempanel Adhepanel, Cempanel Cemrock" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/logo-nobg2.svg" rel="icon">
@@ -38,7 +39,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center justify-content-lg-between">
 
-          <a href="/index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid"></a>
+          <a href="/index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo-nobg2.svg" alt="IHC logo" class="img-fluid"></a>
 
           <div class="col-xl-9 d-flex align-items-center justify-content-lg-end">
 
@@ -98,7 +99,7 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="card">
-              <img src="/assets/img/products/cempanel/estandar.png" class="card-img-top" alt="...">
+              <img src="/assets/img/products/cempanel/estandar.png" class="card-img-top" alt="Cempanel Estandar">
               <div class="card-info row d-flex align-items-start justify-content-center">
                 <h2>Cempanel  <b>Estandar</b></h2>
                 <p>Es de fácil instalación y manejo, con la resistencia y
@@ -109,7 +110,7 @@
           
           <div class="col-xl-3 col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="card">
-              <img src="/assets/img/products/cempanel/bicelado.png" class="card-img-top" alt="...">
+              <img src="/assets/img/products/cempanel/bicelado.png" class="card-img-top" alt="Cempanel Biselado">
               <div class="card-info row d-flex align-items-center justify-content-center">
                 <h2>Cempanel <b>Biselado</b></h2>
                 <p>Cuenta con los 4 lados con un “bisel”, este acabado
@@ -122,7 +123,7 @@
   
           <div class="col-xl-3 col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="card">
-              <img src="/assets/img/products/cempanel/rectificado.png" class="card-img-top" alt="...">
+              <img src="/assets/img/products/cempanel/rectificado.png" class="card-img-top" alt="Cempanel Rectificado">
               <div class="card-info row d-flex align-items-start justify-content-center">
                 <h2>Cempanel <b>Rectificado</b></h2>
                 <p>Tiene como característica estar “lijado” en la
@@ -134,7 +135,7 @@
   
           <div class="col-xl-3 col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="card">
-              <img src="/assets/img/products/cempanel/image.png" class="card-img-top" alt="...">
+              <img src="/assets/img/products/cempanel/image.png" class="card-img-top" alt="Cempanel Image">
               <div class="card-info row d-flex align-items-start justify-content-center">
                 <h2>Cempanel <b>Image</b></h2>
                 <p>Permite crear diseños variados libres a la imaginación,
@@ -147,7 +148,7 @@
 
           <div class="col-xl-3 col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="card">
-              <img src="/assets/img/products/cempanel/cedar.png" class="card-img-top" alt="...">
+              <img src="/assets/img/products/cempanel/cedar.png" class="card-img-top" alt="Cempanel Cedar">
               <div class="card-info row d-flex align-items-start justify-content-center">
                 <h2>Cempanel <b>Cedar</b></h2>
                 <p>Con una apariencia de tipo madera, representa
@@ -160,7 +161,7 @@
           
           <div class="col-xl-3 col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="card">
-              <img src="/assets/img/products/cempanel/cemplank.png" class="card-img-top" alt="...">
+              <img src="/assets/img/products/cempanel/cemplank.png" class="card-img-top" alt="Cempanel Cemplank">
               <div class="card-info row d-flex align-items-start justify-content-center">
                 <h2>Cempanel <b>Cemplank</b></h2>
                 <p>Cuenta con una textura en relieve
@@ -172,7 +173,7 @@
   
           <div class="col-xl-3 col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="card">
-              <img src="/assets/img/products/cempanel/adhepanel.png" class="card-img-top" alt="...">
+              <img src="/assets/img/products/cempanel/adhepanel.png" class="card-img-top" alt="Cempanel Adhepanel">
               <div class="card-info row d-flex align-items-start justify-content-center">
                 <h2>Cempanel <b>Adhepanel</b></h2>
                 <p>Tiene una textura ranurado que permite una mejor
@@ -184,7 +185,7 @@
   
           <div class="col-xl-3 col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="card">
-              <img src="/assets/img/products/cempanel/cemrock.png" class="card-img-top" alt="...">
+              <img src="/assets/img/products/cempanel/cemrock.png" class="card-img-top" alt="Cempanel Cemrock">
               <div class="card-info row d-flex align-items-start justify-content-center">
                 <h2>Cempanel <b>Cemrock</b></h2>
                 <p>Diseñado para recibir acabados con selladores y pintura, pastas y
@@ -204,7 +205,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid">
+      <img src="assets/img/logo-nobg2.svg" alt="IHC logo" class="img-fluid">
       <p>Instalaciones Hidromecánicas y de Construcción S.A. de C.V.</p>
 
       <a href="/contact.html" class="get-started-btn scrollto">Contáctanos</a>
