--- a/products-cilimex.html
+++ b/products-cilimex.html
@@ -6,8 +6,9 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Grupo IHC - Productos | Cilimex</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Casetones y columnas de fibra de vidrio, fabricados con resina de poliéster y reforzada con madera. Son reutilizables, resistentes y duraderos, 
+                con altos estándares de calidad garantizando seguridad y un acabado aparente." name="description">
+  <meta content="IHC, Cilimex, Casetón de fibra de vidrio, Columna de fibra de vidrio, Puntal Metálico" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/logo-nobg2.svg" rel="icon">
@@ -38,7 +39,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center justify-content-lg-between">
 
-          <a href="/index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid"></a>
+          <a href="/index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo-nobg2.svg" alt="IHC logo" class="img-fluid"></a>
 
           <div class="col-xl-9 d-flex align-items-center justify-content-lg-end">
 
@@ -79,7 +80,7 @@
       <div class="bag container-fluid">
         <div class="container">
           <div class="section-title">
-            <img src="/assets/img/products/cilimex-logo.png" class="img-fluid" alt="">
+            <img src="/assets/img/products/cilimex-logo.png" class="img-fluid" alt="Cilimex logo">
             <p>Casetones y columnas de fibra de vidrio, fabricados con resina de poliéster y reforzada con madera. Son reutilizables, resistentes y duraderos, con altos estándares de calidad  garantizando seguridad y un acabado aparente.</p>
           </div>
         </div>
@@ -100,7 +101,7 @@
                 <div class="col-lg-5 d-flex justify-content-center align-items-center">
                   <div class="img-border col-lg-5 d-flex justify-content-center align-items-center">
                     <div class="img-bg d-flex justify-content-center align-items-center">
-                      <img src="/assets/img/products/cilimex/caseton.png" class="img-fluid" alt="">
+                      <img src="/assets/img/products/cilimex/caseton.png" class="img-fluid" alt="Casetón cilimex">
                     </div>
                   </div>
                 </div>
@@ -137,7 +138,7 @@
                 <div class="col-lg-5 d-flex justify-content-center align-items-center">
                   <div class="img-border col-lg-5 d-flex justify-content-center align-items-center">
                     <div class="img-bg d-flex justify-content-center align-items-center">
-                      <img src="/assets/img/products/cilimex/columnas.png" class="img-fluid" alt="">
+                      <img src="/assets/img/products/cilimex/columnas.png" class="img-fluid" alt="Columna cilimex">
                     </div>
                   </div>
                 </div>
@@ -172,7 +173,7 @@
                 <div class="col-lg-5 d-flex justify-content-center align-items-center">
                   <div class="img-border col-lg-5 d-flex justify-content-center align-items-center">
                     <div class="img-bg d-flex justify-content-center align-items-center">
-                      <img src="/assets/img/products/cilimex/puntal.png" class="img-fluid" alt="">
+                      <img src="/assets/img/products/cilimex/puntal.png" class="img-fluid" alt="Puntal metálico cilimex">
                     </div>
                   </div>
                 </div>
@@ -198,7 +199,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid">
+      <img src="assets/img/logo-nobg2.svg" alt="IHC logo" class="img-fluid">
       <p>Instalaciones Hidromecánicas y de Construcción S.A. de C.V.</p>
 
       <a href="/contact.html" class="get-started-btn scrollto">Contáctanos</a>
