--- a/products.html
+++ b/products.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Grupo IHC - Productos</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="En IHC contamos con una amplia gama de productos de los mejores materiales y la mejor calidad, además de servicios especializados para la construcción con todas sus credenciales y certificaciones." name="description">
+  <meta content="IHC, productos, Novidesa, Cempanel, Cilimex" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/logo-nobg2.svg" rel="icon">
@@ -38,7 +38,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-11 d-flex align-items-center justify-content-lg-between">
 
-          <a href="/index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid"></a>
+          <a href="/index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo-nobg2.svg" alt="IHC logo" class="img-fluid"></a>
 
           <div class="col-xl-9 d-flex align-items-center justify-content-lg-end">
 
@@ -86,7 +86,7 @@
       <div class="container-fluid novidesa">
 
         <div class="container">
-          <img src="/assets/img/products/novidesa.png" class="img-logo img-fluid" alt="">
+          <img src="/assets/img/products/novidesa.png" class="img-logo img-fluid" alt="Logo Novidesa">
         </div>
 
         <div class="product container">
@@ -96,7 +96,7 @@
               <a href="/products-novidesa.html" class="btn-learn-more">Ver más</a>
             </div>
             <div class="col-lg-7">
-              <img src="/assets/img/products/noidesa-presentacion.png" class="image" alt="">
+              <img src="/assets/img/products/noidesa-presentacion.png" class="image" alt="Imagen de ejemplo Novidesa">
             </div>
 
           </div>
@@ -106,14 +106,14 @@
       <div class="container-fluid cempanel">
 
         <div class="logo-cont container">
-          <img src="/assets/img/products/cempanel-logo.png" class="img-logo img-fluid" alt="">
+          <img src="/assets/img/products/cempanel-logo.png" class="img-logo img-fluid" alt="Logo Cempanel">
         </div>
 
         <div class="product container">
           <div class="row d-flex align-items-center">
 
             <div class="col-lg-7">
-              <img src="/assets/img/products/cempanel-presentation.jpg" class="image" alt="">
+              <img src="/assets/img/products/cempanel-presentation.jpg" class="image" alt="Imagen de ejemplo Cempanel">
             </div>
 
             <div class="info col-lg-5">
@@ -128,7 +128,7 @@
       <div class="container-fluid cilimex">
 
         <div class="container">
-          <img src="/assets/img/products/cilimex-logo.png" class="img-logo img-fluid" alt="">
+          <img src="/assets/img/products/cilimex-logo.png" class="img-logo img-fluid" alt="Logo Cilimex">
         </div>
 
         <div class="product container">
@@ -138,7 +138,7 @@
               <a href="/products-cilimex.html" class="btn-learn-more">Ver más</a>
             </div>
             <div class="col-lg-7">
-              <img src="/assets/img/products/cilimex-presentation.jpg" class="image" alt="">
+              <img src="/assets/img/products/cilimex-presentation.jpg" class="image" alt="Imagen de ejemplo Cilimex">
             </div>
 
           </div>
@@ -153,7 +153,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <img src="assets/img/logo-nobg2.svg" alt="" class="img-fluid">
+      <img src="assets/img/logo-nobg2.svg" alt="IHC logo" class="img-fluid">
       <p>Instalaciones Hidromecánicas y de Construcción S.A. de C.V.</p>
 
       <a href="/contact.html" class="get-started-btn scrollto">Contáctanos</a>
